# QmlSharp

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codespell-ignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .vsconfig  AGENTS.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  QmlSharp.Win.slnx  QmlSharp.sln  QmlSharp.slnx  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  linux-ci.yml  macos-ci.yml  windows-ci.yml
cmake/: CompileCommands.cmake  CompilerWarnings.cmake  Qt.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/release/: constraint-coverage.md  traceability-matrix.md
native/: CMakeLists.txt
native/include/qmlsharp/: bootstrap_placeholder.h  qmlsharp_abi.h  qmlsharp_export.h
native/src/: bootstrap_placeholder.cpp  qmlsharp_abi.cpp  qmlsharp_diagnostics.cpp  qmlsharp_diagnostics.h  qmlsharp_effects.cpp  qmlsharp_effects.h  qmlsharp_engine.cpp  qmlsharp_engine.h  qmlsharp_error_overlay.cpp  qmlsharp_error_overlay.h  qmlsharp_errors.cpp  qmlsharp_errors.h  qmlsharp_hot_reload.cpp  qmlsharp_hot_reload.h  qmlsharp_instances.cpp  qmlsharp_instances.h  qmlsharp_metrics.cpp  qmlsharp_metrics.h  qmlsharp_state.cpp  qmlsharp_state.h  qmlsharp_type_registry.cpp  qmlsharp_type_registry.h
native/tests/: CMakeLists.txt  native_host_performance_tests.cpp  native_host_smoke_tests.cpp
native/tests/fixtures/: RegistrationCounterViewModel.cpp  RegistrationCounterViewModel.h  RegistrationStatusViewModel.cpp  RegistrationStatusViewModel.h  qmlsharp_integration_fixture_exports.cpp
native/windows/: QmlSharp.Native.Windows.props  QmlSharp.Native.Windows.targets
native/windows/QmlSharp.Native/: QmlSharp.Native.vcxproj
native/windows/QmlSharp.Native.IntegrationFixture/: QmlSharp.Native.IntegrationFixture.vcxproj
native/windows/QmlSharp.Native.PerformanceTests/: QmlSharp.Native.PerformanceTests.vcxproj
native/windows/QmlSharp.Native.Tests/: QmlSharp.Native.Tests.vcxproj
src/QmlSharp.Build/: BuildPipeline.cs  BuildStageException.cs  BuildStageResult.cs  BuildStatsDelta.cs  CMakeBuilder.cs  CSharpCompilationBuildStage.cs  CleanService.cs  CliContracts.cs  CommandResultContracts.cs  CommandServiceContracts.cs  Commands.cs  ConfigLoader.cs  ConfigurationContracts.cs  CppCodeGenerator.cs  CppTypeMap.cs  DevSession.cs  DevSessionContracts.cs  DiagnosticsContracts.cs  DistributionContracts.cs  Doctor.cs  DoctorContracts.cs  DoctorEnvironment.cs  DoctorProcessResult.cs  FakeBuildStage.cs  GenerationContracts.cs  IBuildStage.cs  IDoctorEnvironment.cs  InitService.cs  ModuleMetadataBuildStage.cs  ModuleMetadataPaths.cs  NativeBuildStage.cs  OutputAssemblyBuildStage.cs  PackageAndResourceContracts.cs  PackageResolutionBuildStage.cs  PackageResolver.cs  PipelineContracts.cs  PlatformDistributor.cs  ProductLayout.cs  ProductLayoutContracts.cs  QmlSharp.Build.csproj  (+5 more)
src/QmlSharp.Cli/: CliCommandServices.cs  CliDevCommand.cs  CommandShellDevSession.cs  Program.cs  QmlSharp.Cli.csproj  QmlSharpCli.cs
src/QmlSharp.Compiler/: QmlSharp.Compiler.csproj
src/QmlSharp.Core/: CommandAttribute.cs  EffectAttribute.cs  Placeholder.cs  QmlSharp.Core.csproj  StateAttribute.cs  View.cs  ViewModelAttribute.cs
src/QmlSharp.DevTools/: DependencyContracts.cs  DevConsole.cs  DevConsoleContracts.cs  DevServer.cs  DevServerContracts.cs  ErrorOverlay.cs  ErrorOverlayContracts.cs  FileWatcher.cs  FileWatcherContracts.cs  HotReloadContracts.cs  HotReloadOrchestrator.cs  InstanceMatcher.cs  PerfProfiler.cs  PerfProfilerContracts.cs  QmlSharp.DevTools.csproj  Repl.cs  ReplContracts.cs  SchemaDiffResult.cs  SchemaDiffer.cs  SourceMapLookup.cs
src/QmlSharp.Dsl/: BuilderContracts.cs  BuilderMetadata.cs  DispatchProxyFactory.cs  NameConventions.cs  ObjectBuilder.cs  PropertyCollector.cs  QmlEnum.cs  QmlSharp.Dsl.csproj  QmlValueConverter.cs
src/QmlSharp.Dsl.Generator/: AttachedPropGenerator.cs  CodeEmitter.cs  DefaultPropertyHandler.cs  DiagnosticsAndErrors.cs  EmissionContracts.cs  EnumGenerator.cs  GenerationPipeline.cs  InheritanceContracts.cs  InheritanceResolver.cs  MemberGenerationContracts.cs  MemberNameUtilities.cs  MethodGenerator.cs  ModuleMapper.cs  ModulePackager.cs  NameRegistry.cs  NameRegistryContracts.cs  PackagingContracts.cs  PipelineContracts.cs  PropGenerator.cs  QmlSharp.Dsl.Generator.csproj  SignalGenerator.cs  TypeMapper.cs  TypeMappingContracts.cs  ViewModelContracts.cs  ViewModelIntegration.cs
src/QmlSharp.Host/: QmlSharp.Host.csproj
src/QmlSharp.Qml.Ast/: AstContracts.cs  QmlSharp.Qml.Ast.csproj
src/QmlSharp.Qml.Emitter/: EmitContext.cs  EmitOrdering.cs  EmitPipeline.cs  EmitterContracts.cs  PipelineContracts.cs  QmlEmitter.cs  QmlSharp.Qml.Emitter.csproj  QmlValueFormatter.cs  QmlWriter.cs  ResolvedEmitOptions.cs  SourceMapImpl.cs  StringLiteralEscaper.cs
src/QmlSharp.Qt.Tools/: Diagnostics.cs  Enums.cs  Errors.cs  Interfaces.cs  Options.cs  QmlCachegen.cs  QmlDom.cs  QmlFormat.cs  QmlImportScanner.cs  QmlLint.cs  QmlLintCategoryExtensions.cs  QmlRunner.cs  QmlSharp.Qt.Tools.csproj  QmlTypeRegistrar.cs  Qmltc.cs  QtDiagnosticParser.cs  QtToolchain.cs  QualityGate.cs  Rcc.cs  Results.cs  ToolRunner.cs
src/QmlSharp.Registry/: BuildContracts.cs  Placeholder.cs  QmlRegistryContracts.cs  QmlSharp.Registry.csproj  RegistryBuilder.cs
templates/qmlsharp-app/: qmlsharp.json  {{ProjectName}}.csproj
templates/qmlsharp-library/: qmlsharp.json  {{ProjectName}}.csproj
tests/QmlSharp.Build.Tests/: BuildCommandEndToEndTests.cs  BuildPipelineTests.cs  BuildStageEndToEndTests.cs  BuildSystemClosureTests.cs  CMakeBuilderTests.cs  CleanCommandTests.cs  CommandShellTests.cs  ConfigLoaderTests.cs  ContractSmokeTests.cs  CppCodeGeneratorTests.cs  DeterminismHardeningTests.cs  DevSessionTests.cs  DiagnosticCodeTests.cs  DiagnosticHardeningTests.cs  DoctorTests.cs  GlobalUsings.cs  InitCommandTests.cs  (+9 more)
tests/QmlSharp.Build.Tests/testdata/golden/: CMakeLists.txt  CounterViewModel.cpp  CounterViewModel.h  type_registration.cpp
(+523 files in other folders)
